<resources>
    <string name="app_name">CareTom</string>
    <string name="facebook_app_id">116621532224239</string>
    <string name="facebook_app_secret">57d7cf1e407fe9c0c7318e53236a5af5</string>

    <string-array name="menu_headings">
        <item>SERVICES</item>
        <item>PACKAGES</item>
        <item>BLOGS</item>
        <item>LOGIN</item>
        <item>ABOUT US</item>
        <item>CONTACT US</item>
    </string-array>

    <string-array name="services_main_headings">
        <item>YOUR DHR</item>
        <item>DIET CHART</item>
        <item>EMERGENCY</item>
        <item>BOOK A DOC.</item>
        <item>FREE PACKAGES</item>
        <item>HEALTH TIPS</item>
    </string-array>


    <string-array name="navigation_options">
        <item>SERVICES</item>
        <item>PACKAGES</item>
        <item>BLOG</item>
        <item>LOGIN</item>
        <item>ABOUT US</item>
        <item>CONTACT US</item>
    </string-array>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="send">SEND</string>
    <string name="your_name">Your Name</string>
    <string name="your_address">Your Address</string>
    <string name="your_email">Email Id</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="contact_us_heading">Get in touch and we\'ll get back to you as soon as we can</string>
    <string name="name_empty">Please enter Name</string>
    <string name="address_empty">Please enter Address</string>
    <string name="email_empty">Please enter Email</string>
    <string name="mobile_no_empty">Please enter Mobile No.</string>
    <string name="small_mobile_no">Mobile No should be 10 digits long</string>
    <string name="email_incorrect_format">Please enter email in proper format</string>
    <string name="note">Note</string>
    <string name="readMore">Read More</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="terms_service">By Logging in you agree to Care Tom Terms of services and Privacy Policy</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_firstname">Enter First Name</string>
    <string name="enter_lastname">Enter Last Name</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_degree">Enter Degree</string>
    <string name="enter_specialization">Your Specialization</string>
    <string name="enter_fee">Your Fee</string>
    <string name="my_patient_list">My Patient List</string>
    <string name="my_upcoming_appointments">My Upcoming Appointments</string>
    <string name="upload_blog">Upload a Blog</string>
    <string name="edit_profile">Edit My Profile</string>
    <string name="my_walllet_earning">My Walllet/Earnings</string>
    <string name="enter_diease">Enter Diease description</string>

</resources>
