<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/banner_doc_dashboard"
                android:scaleType="fitXY" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/screen_margin_left"
                android:layout_marginRight="@dimen/screen_margin_right"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_my_patient_list"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_icon"
                    android:text="@string/my_patient_list" />


                <Button
                    android:id="@+id/btn_my_upcoming_appointments"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_icon"
                    android:text="@string/my_upcoming_appointments" />


                <Button
                    android:id="@+id/btn_upload_blog"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_icon"
                    android:text="@string/upload_blog" />


                <Button
                    android:id="@+id/btn_edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_icon"
                    android:text="@string/edit_profile" />


                <Button
                    android:id="@+id/btn_my_wallet"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_icon"
                    android:text="@string/my_walllet_earning" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>
