<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_send"

        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_top"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:scaleType="fitXY"
                android:src="@drawable/banner_contact_us" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/screen_margin_left"
                android:layout_marginRight="@dimen/screen_margin_right"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/heart_icon" />


                <com.caretom.customViews.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/contact_us_heading"
                    android:textColor="@color/cms_page_heading_color"
                    android:textSize="@dimen/screen_title_text_size" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/screen_margin_left"
                android:layout_marginRight="@dimen/screen_margin_right"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/name" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/your_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingLeft="15dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/screen_margin_left"
                android:layout_marginRight="@dimen/screen_margin_right"
                android:background="@color/lineColor" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/screen_margin_left"
                android:layout_marginRight="@dimen/screen_margin_right"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/your_address" />

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/your_address"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:paddingLeft="15dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/screen_margin_left"
                android:layout_marginRight="@dimen/screen_margin_right"
                android:background="@color/lineColor" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/screen_margin_left"
                android:layout_marginRight="@dimen/screen_margin_right"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="15dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/email" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/your_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/screen_margin_left"
                android:layout_marginRight="@dimen/screen_margin_right"
                android:background="@color/lineColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/screen_margin_left"
                android:layout_marginRight="@dimen/screen_margin_right"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/mobile" />

                <EditText
                    android:id="@+id/et_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/mobile_no"
                    android:imeOptions="actionDone"

                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingLeft="15dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/screen_margin_left"
                android:layout_marginRight="@dimen/screen_margin_right"
                android:background="@color/lineColor" />

        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/toolbarColor"
        android:text="@string/send"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/screen_margin_left"
        android:layout_marginRight="@dimen/screen_margin_right"
        android:textColor="@color/whiteColor" />

</RelativeLayout>
