<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/banner_login" />


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/screen_margin_left"
                android:layout_marginRight="@dimen/screen_margin_right"
                android:layout_marginTop="35dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/email" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/enter_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/screen_margin_left"
                android:layout_marginRight="@dimen/screen_margin_right"
                android:background="@color/lineColor" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/screen_margin_left"
                android:layout_marginRight="@dimen/screen_margin_right"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/name" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/enter_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/screen_margin_left"
                android:layout_marginRight="@dimen/screen_margin_right"
                android:background="@color/lineColor" />


            <com.caretom.customViews.CustomTextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/screen_margin_right"
                android:layout_marginTop="15dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/forgot_password"
                android:textSize="17sp" />


            <com.caretom.customViews.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/screen_margin_left"
                android:layout_marginRight="@dimen/screen_margin_right"
                android:layout_marginTop="15dp"

                android:lineSpacingExtra="2sp"
                android:text="@string/terms_service"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="@dimen/screen_margin_left"
        android:layout_marginRight="@dimen/screen_margin_right"
        android:background="@color/toolbarColor"
        android:text="LOGIN"
        android:textColor="@color/whiteColor" />

</RelativeLayout>
